--- a/style.css
+++ b/style.css
@@ -137,3 +137,20 @@ a:hover {
     box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75) !important;
     right: 10px;
 }
+
+@media screen and (max-width: 600px) {
+    .container {
+        width: 80%;
+        height: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .menu a {
+        font-size: 25px;
+    }
+
+    .project {
+        display: block;
+    }
+}
