added fix for box on mobile device

--- a/style.css
+++ b/style.css
@@ -152,5 +152,12 @@ a:hover {
 
     .project {
         display: block;
+        height: auto;
+        width: auto;
+        float: none;
+    }
+
+    .wave {
+        display: none;
     }
 }
