--- a/output.css
+++ b/output.css
@@ -132,7 +132,8 @@ body {
   display: inline-block;
   padding: 0 3%;
   color: white; }
-  .menu-item:after:last-child:after {
+
+  .menu-item:last-child:after {
     display: none; }
 
 /*# sourceMappingURL=output.css.map */
