--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,9 @@ body {
 
 .menu {
     a {
+        font-family: 'Poppins', sans-serif;
         font-size: 30px;
+        font-weight: bold;
         color: white;
         text-decoration: none;
         transition-duration: .5s;
