--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ a:hover {
     display: block;
   }
   .menu-item:after {
+    content: "" !important;
     display: none;
   }
   .project {
@@ -136,6 +137,9 @@ a:hover {
   }
   .wave {
     display: none;
+  }
+  .icons {
+    font-size: 40px !important;
   }
 }
 
@@ -165,7 +169,9 @@ body ::selection {
 }
 
 .menu a {
+  font-family: 'Poppins', sans-serif;
   font-size: 30px;
+  font-weight: bold;
   color: white;
   text-decoration: none;
   -webkit-transition-duration: .5s;
