--- a/style.css
+++ b/style.css
@@ -121,8 +121,10 @@ a:hover {
     margin-left: auto;
     margin-right: auto;
   }
+  .menu a {
+    font-size: 25px !important;
+  }
   .menu-item {
-    font-size: 28px;
     display: block;
   }
   .menu-item:after {
@@ -140,6 +142,12 @@ a:hover {
   }
   .icons {
     font-size: 40px !important;
+  }
+  .list-divider {
+    width: 70% !important;
+  }
+  img {
+    width: 95% !important;
   }
 }
 
