--- a/style.css
+++ b/style.css
@@ -47,6 +47,12 @@ a:hover {
   padding: 10px;
   text-align: center;
   font-family: 'Poppins', sans-serif;
+  font-size: 3.3em;
+  margin-top: -60px;
+  line-height: 1;
+  letter-spacing: -0.04em;
+  font-weight: 900;
+  font-style: normal;
 }
 
 .list-divider {
