--- a/style.css
+++ b/style.css
@@ -39,10 +39,10 @@ a:hover {
           box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75) !important;
   right: 10px;
   line-height: 32px;
-  letter-spacing: -1.54px;
-  font-weight: 900;
-  font-style: normal;
-  font-size: 126%;
+  padding: 0 20px;
+  font-weight: 100;
+  letter-spacing: -0.4px;
+  font-size: 22px;
 }
 
 .container {
