--- a/style.css
+++ b/style.css
@@ -35,14 +35,10 @@ a:hover {
   height: -moz-fit-content;
   height: fit-content;
   text-align: center;
+  font-size: 130%;
   -webkit-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75) !important;
           box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75) !important;
   right: 10px;
-  line-height: 32px;
-  padding: 0 20px;
-  font-weight: 100;
-  letter-spacing: -0.4px;
-  font-size: 22px;
 }
 
 .container {
@@ -51,19 +47,6 @@ a:hover {
   padding: 10px;
   text-align: center;
   font-family: 'Poppins', sans-serif;
-  font-size: 1.2em;
-  margin-top: -60px;
-  line-height: 1;
-  letter-spacing: -0.04em;
-  font-weight: 900;
-  font-style: normal;
-}
-
-.container h2 {
-  line-height: 35px;
-  letter-spacing: -0.97px;
-  font-weight: 100;
-  font-style: normal;
 }
 
 .list-divider {
