--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Raleway:ital@1&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500;600&display=swap');
 .slide-basic, .firstslide, .secondslide {
   padding: 170px 0;
   position: relative;
@@ -39,14 +39,35 @@ a:hover {
   -webkit-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75) !important;
           box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75) !important;
   right: 10px;
+  display: block;
+  margin-block-start: 1.33em;
+  margin-block-end: 1.33em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
 }
 
 .container {
   position: relative;
+  display: block;
   z-index: 4;
   padding: 10px;
   text-align: center;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
   font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+}
+
+.container h1 {
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+}
+
+.container h2 {
+  font-size: 1.5em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
 }
 
 .list-divider {
