--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600&display=swap');
+
 .slide-basic, .firstslide, .secondslide {
   padding: 170px 0;
   position: relative;
