--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -33,6 +33,10 @@ a {
     font-size: 130%;
     box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75) !important;
     right: 10px;
+    
+    h4 {
+        font-weight: 500;
+    }
 }
 
 .container {
@@ -41,6 +45,10 @@ a {
     padding: 10px;
     text-align: center;
     font-family: 'Poppins', sans-serif;
+    
+    h2 {
+        font-weight: 500;
+    }
 }
 
 .list-divider {
