--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Raleway:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600&family=Raleway:ital@1&display=swap');
 @import "sass/globals";
 @import "sass/slides";
 @import "sass/queries";
